--- a/package.json
+++ b/package.json
@@ -40,8 +40,10 @@
     "@nestjs/testing": "8.4.7",
     "adminjs": "^5.10.4",
     "bcryptjs": "2.4.3",
+    "buffer-to-stream": "^1.0.0",
     "class-transformer": "0.5.1",
     "class-validator": "0.13.2",
+    "cloudinary": "^1.36.2",
     "connect-mongodb-session": "3.1.1",
     "express": "4.18.1",
     "express-session": "1.17.3",
@@ -51,6 +53,7 @@
     "module-alias": "2.2.2",
     "mongodb": "^4.1.0",
     "mongoose": "^5.13.7",
+    "multer": "^1.4.5-lts.1",
     "nestjs-redis": "github:GyanendroKh/nestjs-redis#nest8-fix",
     "nodemailer": "^6.7.5",
     "open": "8.4.0",
@@ -61,12 +64,14 @@
     "reflect-metadata": "0.1.13",
     "rimraf": "3.0.2",
     "rxjs": "7.5.5",
-    "swagger-ui-express": "4.4.0"
+    "swagger-ui-express": "4.4.0",
+    "@types/multer": "^1.4.7"
   },
   "devDependencies": {
     "@nestjs/cli": "8.2.6",
     "@nestjs/schematics": "8.0.11",
     "@types/bcryptjs": "2.4.2",
+    "@types/buffer-to-stream": "^1.0.0",
     "@types/express": "4.17.13",
     "@types/jest": "28.1.3",
     "@types/lodash": "4.14.182",
