--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "docs": "typedoc --options typedoc.json"
   },
   "dependencies": {
-    "@adminjs/express": "^4.1.3",
+    "@adminjs/express": "^6.0.0",
     "@adminjs/mongoose": "^2.0.4",
     "@adminjs/nestjs": "^4.0.1",
     "@adminjs/passwords": "^2.0.2",
@@ -38,6 +38,7 @@
     "@nestjs/platform-express": "8.4.7",
     "@nestjs/swagger": "5.2.1",
     "@nestjs/testing": "8.4.7",
+    "@types/multer": "^1.4.7",
     "adminjs": "^5.10.4",
     "bcryptjs": "2.4.3",
     "buffer-to-stream": "^1.0.0",
@@ -64,8 +65,7 @@
     "reflect-metadata": "0.1.13",
     "rimraf": "3.0.2",
     "rxjs": "7.5.5",
-    "swagger-ui-express": "4.4.0",
-    "@types/multer": "^1.4.7"
+    "swagger-ui-express": "4.4.0"
   },
   "devDependencies": {
     "@nestjs/cli": "8.2.6",
