feat: delivery module

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@adminjs/passwords": "^2.0.2",
     "@liaoliaots/nestjs-redis": "8.2.1",
     "@nestjs-modules/mailer": "^1.7.1",
+    "@nestjs/bull": "^10.0.1",
     "@nestjs/common": "8.4.7",
     "@nestjs/config": "2.1.0",
     "@nestjs/core": "8.4.7",
@@ -42,6 +43,7 @@
     "adminjs": "^7.0.5",
     "bcryptjs": "2.4.3",
     "buffer-to-stream": "^1.0.0",
+    "bull": "^4.10.4",
     "class-transformer": "0.5.1",
     "class-validator": "0.13.2",
     "cloudinary": "^1.36.2",
