--- a/package.json
+++ b/package.json
@@ -27,9 +27,13 @@
     "@adminjs/mongoose": "^2.0.4",
     "@adminjs/nestjs": "^6.0.1",
     "@adminjs/passwords": "^2.0.2",
+    "@bull-board/api": "^5.7.1",
+    "@bull-board/express": "^5.7.1",
+    "@bull-board/nestjs": "^5.7.1",
     "@liaoliaots/nestjs-redis": "8.2.1",
     "@nestjs-modules/mailer": "^1.7.1",
     "@nestjs/bull": "^10.0.1",
+    "@nestjs/bullmq": "^10.0.1",
     "@nestjs/common": "8.4.7",
     "@nestjs/config": "2.1.0",
     "@nestjs/core": "8.4.7",
@@ -44,6 +48,7 @@
     "bcryptjs": "2.4.3",
     "buffer-to-stream": "^1.0.0",
     "bull": "^4.10.4",
+    "bullmq": "^4.6.3",
     "class-transformer": "0.5.1",
     "class-validator": "0.13.2",
     "cloudinary": "^1.36.2",
