--- a/package.json
+++ b/package.json
@@ -53,10 +53,11 @@
     "class-validator": "0.13.2",
     "cloudinary": "^1.36.2",
     "connect-mongodb-session": "3.1.1",
+    "dotenv": "^16.3.1",
     "express": "4.18.1",
     "express-session": "1.17.3",
     "husky": "8.0.1",
-    "ioredis": "^5.0.6",
+    "ioredis": "^5.3.2",
     "lodash": "4.17.21",
     "module-alias": "2.2.2",
     "mongodb": "^4.1.0",
@@ -69,6 +70,7 @@
     "passport-google-oauth20": "2.0.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
+    "redis-url": "^1.2.1",
     "reflect-metadata": "0.1.13",
     "rimraf": "3.0.2",
     "rxjs": "7.5.5",
