--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -38,7 +38,9 @@
         "no-underscore-dangle": "off",
         "consistent-return": "off",
       "import/prefer-default-export": "off",
-      "max-classes-per-file": "off"
+      "max-classes-per-file": "off",
+      "no-shadow": "off",
+      "@typescript-eslint/no-shadow": ["error"]
     },
     "overrides": [
         {
